API testing, Date.js model created

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+
+<form action="/searchPlace" method="POST">
+<p>Search place by Id: <input type="button" class="form-control" name="search" value="placeId"></p>
+<button type="submit" class="btn btn-outline-danger">Search!</button>
+</form>
