--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,9 @@
 <p>Welcome to {{title}}</p>
 
 
-<form action="/searchPlace" method="POST">
-<p>Search place by Id: <input type="button" class="form-control" name="search" value="placeId"></p>
+<a href="/searchPlace">search</a>
+
+{{!-- <form action="/searchPlace" method="GET">
+Search place by Id: <input type="button" class="form-control" name="Cafe" value="Cafe">
 <button type="submit" class="btn btn-outline-danger">Search!</button>
-</form>
+</form> --}}
