--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,5 +34,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="/javascripts/script.js"></script>
+    <script src="/routes/index.js"></script>
+
+  
 </body>
 </html>
