--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Save my Date!</h1>
+<p>Welcome to Save my Date!</p>
 
 
-<a href="/searchPlace">search</a>
+<a href="/location">Start</a>
 
 {{!-- <form action="/searchPlace" method="GET">
 Search place by Id: <input type="button" class="form-control" name="Cafe" value="Cafe">
