--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,24 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+// .container-zomato{
+
+// }
+//choose primary here
+
+$primary: #AF2A1B;
 
 a {
   color: #00B7FF;
 }
+
+
+i{
+  border-radius:30px;
+  background-color: $primary;
+  color:white;
+  width: 20px;
+}
+
