--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,9 +13,16 @@ a {
 
 
 i{
-  border-radius:30px;
-  background-color: $primary;
-  color:white;
-  width: 20px;
+  color:$primary;
+  border:3px solid $primary;
+  border-radius:50px;
+  padding:5%;
+  margin:5%;
 }
+
+i:hover{
+  background-color:$primary;
+  color:white;
+}
+
 
