--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -1,26 +1,26 @@
-<h3>What kind of date are you looking for?</h3>
+<h3 class="text-center">What kind of date are you looking for?</h3>
 
 <div class="container">
   <div class="row">
     <div class="col col-sm-4">
-      <i class="fas fa-glass-martini-alt"></i>
+      <i class="fas fa-glass-martini-alt fa-3x"></i>
     </div>
     <div class="col col-sm-4">
-      2 of 3
+      <i class="fas fa-music fa-3x"></i>
     </div>
     <div class="col col-sm-4">
-      3 of 3
+      <i class="fas fa-film fa-3x"></i>
     </div>
   </div>
   <div class="row">
     <div class="col col-sm-4">
-      1 of 3
+     <i class="fas fa-pizza-slice fa-3x"></i>
     </div>
     <div class="col col-sm-4">
-      2 of 3
+      <i class="fas fa-couch fa-3x"></i>
     </div>
     <div class="col col-sm-4">
-      3 of 3
+      <i class="fas fa-mug-hot fa-3x"></i>
     </div>
   </div>
 </div>
