--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,8 +2,8 @@
 <h2>Login</h2>
 
 <form action="/auth/login" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <label for="email">email</label>
+  <input id="email" type="text" name="email" placeholder="JonSnow">
 
   <br><br>
 
