--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,8 +1,8 @@
 <h2>Signup</h2>
 
 <form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <label for="email">email</label>
+  <input id="email" type="text" name="email" placeholder="JonSnow">
 
   <br><br>
 
