--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -3,24 +3,24 @@
 <div class="container">
   <div class="row">
     <div class="col col-sm-4">
-      <i class="fas fa-glass-martini-alt fa-3x"></i>
+      <i class="fas fa-glass-martini-alt fa-3x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-music fa-3x"></i>
+      <i class="fas fa-music fa-3x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-film fa-3x"></i>
+      <i class="fas fa-film fa-3x text-center"></i>
     </div>
   </div>
   <div class="row">
     <div class="col col-sm-4">
-     <i class="fas fa-pizza-slice fa-3x"></i>
+     <i class="fas fa-pizza-slice fa-3x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-couch fa-3x"></i>
+      <i class="fas fa-couch fa-3x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-mug-hot fa-3x"></i>
+      <i class="fas fa-mug-hot fa-3x text-center"></i>
     </div>
   </div>
 </div>
