--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,12 @@
     <li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
     <li class="nav-item"><a class="nav-link" href="/auth/signup">Signup</a></li>
     <li class="nav-item"><a class="nav-link" href="/auth/logout">Logout</a></li>
+    <li class="nav-item"><a class="nav-link" href="/date-type">Date Type</a></li>
+    <li class="nav-item"><a class="nav-link" href="/date-options">Date Options</a></li>
+    <li class="nav-item"><a class="nav-link" href="/current-location">Current Location</a></li>
+    <li class="nav-item"><a class="nav-link" href="/average-cost">Average Cost</a></li>
+    <li class="nav-item"><a class="nav-link" href="/confirm-date">Confirm Date</a></li>
+    <li class="nav-item"><a class="nav-link" href="/location">Location</a></li>
 </ul>
   </nav>
 
