mapbox on user location

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,4 +16,7 @@ i:hover {
   background-color: #AF2A1B;
   color: white; }
 
+.general-container {
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
