--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,4 +1,4 @@
-
+<div class="general-container">
 <h2>Login</h2>
 
 <form action="/auth/login" method="POST" id="form-container">
@@ -23,3 +23,5 @@
     <a href="/auth/signup">Signup</a>
   </p>
 </form>
+
+</div>
