--- a/views/current-location.hbs
+++ b/views/current-location.hbs
@@ -1,4 +1,6 @@
+<div class="general-container">
 <h3>User's current location</h3>
 
   <div id="map" style="width:400px;height:300px"></div>
+  </div>
 
