--- a/views/location.hbs
+++ b/views/location.hbs
@@ -1,2 +1,5 @@
-<h3><a href="/current-location">Are you already on your date?</a></h3>
-<h3><a href="/restaurant-user-form">Are you planning your date?</a></h3>
+<div class="general-container">
+    <h3><a href="/current-location">Are you already on your date?</a></h3>
+    <br><br>
+    <h3><a href="/restaurant-user-form">Are you planning your date?</a></h3>
+</div>
