--- a/views/show-map.hbs
+++ b/views/show-map.hbs
@@ -1,6 +1,7 @@
+<div class="general-container">
+
 <h1>Show User location</h1>
 
   <div id="map" style="width:400px;height:300px"></div>
 
-
-
+</div>
