--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -26,6 +26,10 @@ i:hover{
 
 .general-container{
   margin:0 auto;
+  width:70%;
+  display:flex;
+  justify-content: center;
+  flex-flow:column;
 }
 
 
