--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,4 @@
+<div class="general-container">
 <h2>Signup</h2>
 
 <form action="/auth/signup" method="POST" id="form-container">
@@ -22,3 +23,4 @@
     <a href="/auth/login">Login</a>
   </p>
 </form>
+</div>
