--- a/views/average-cost.hbs
+++ b/views/average-cost.hbs
@@ -1,15 +1,20 @@
+<div class="general-container">
 <p>Choose based on the cost</p>
 
 <div class="container">
   <div class="row">
     <div class="col col-sm-4">
-      <i class="fas fa-glass-martini-alt fa-3x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-music fa-3x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-film fa-3x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
+      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
     </div>
   </div>
+</div>
 </div>
