--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -1,3 +1,5 @@
+<div class="general-container">
+  
 <h3 class="text-center">What kind of date are you looking for?</h3>
 
 <div class="container">
@@ -23,4 +25,6 @@
       <i class="fas fa-mug-hot fa-3x text-center"></i>
     </div>
   </div>
+</div>
+
 </div>
