--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
-<h1>Save my Date!</h1>
+<div class="general-container">
+    <h1>Save my Date!</h1>
 <p>Welcome to Save my Date!</p>
 
 
@@ -8,3 +9,6 @@
 Search place by Id: <input type="button" class="form-control" name="Cafe" value="Cafe">
 <button type="submit" class="btn btn-outline-danger">Search!</button>
 </form> --}}
+
+
+</div>
