--- a/views/current-location.hbs
+++ b/views/current-location.hbs
@@ -1,1 +1,32 @@
 <h3>User's current location</h3>
+
+
+<p>Click the button to get your coordinates.</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
+
+<form action="" method="post">
+  <input type="text" name="Lat">
+</form>
+{{!-- <script>
+  var x = document.getElementById("demo");
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
+  const userLat = position.coords.latitude
+  const userLong = position.coords.longitude
+  console.log("USER COORDINATE", userLat, userLong)
+}
+</script> --}}
+
+
