--- a/views/confirm-date.hbs
+++ b/views/confirm-date.hbs
@@ -1,3 +1,13 @@
 <div class="general-container">
-<p>Confirm the details of your date</p>
+<ul class="h2"> Confirm the details of your date:</ul>
+<li>Restaurant Name: </li>
+<li>Rating: </li>
+<li>Cuisines: </li>
+<li>Average cost for 2: </li>
+</ul>
+
+<br>
+
+<a class="btn btn-danger" href="/profile-page">  SAVE MY DATE!  </a>
+
 </div>
