--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -1,1 +1,13 @@
-<p>User's details</p>
+<div class="general-container">
+<h1>User Profile</h1>
+
+<p>E-mail:</p>  
+
+
+<h2>My future Dates</h2>
+
+<a class="btn btn-info"  href="">Send details to my Date!</a>
+<br>
+<br>
+<h2>My Past Dates</h2>
+</div>
