--- a/views/date-options.hbs
+++ b/views/date-options.hbs
@@ -1,3 +1,13 @@
 <div class="general-container">
 <p>We found these places for you</p>
+
+<ul class="list-group">
+  <li class="list-group-item">Option 1</li>
+  <li class="list-group-item">Option 2</li>
+  <li class="list-group-item">Option 3</li>
+  <li class="list-group-item">Option 4</li>
+  <li class="list-group-item">Option 5</li>
+  <li class="list-group-item">Option 6</li>
+</ul>
+
 </div>
