--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,12 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg" style="background-color: #AF2A1B;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <a class="navbar-brand" href="#">Save My Date</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
     <li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
@@ -33,6 +38,7 @@
     <li class="nav-item"><a class="nav-link" href="/average-cost">Average Cost</a></li>
     <li class="nav-item"><a class="nav-link" href="/confirm-date">Confirm Date</a></li>
     <li class="nav-item"><a class="nav-link" href="/location">Location</a></li>
+      </div>
 </ul>
   </nav>
 
