--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -30,6 +30,9 @@ i:hover{
   display:flex;
   justify-content: center;
   flex-flow:column;
+  align-content:center;
+  justify-content: center;
+  align-items: center;
 }
 
 
