--- a/views/show-map.hbs
+++ b/views/show-map.hbs
@@ -1,7 +1,26 @@
 <div class="general-container">
 
-<h1>Show User location</h1>
+<h1 class="text-center">Show User location</h1>
 
-  <div id="map" style="width:400px;height:300px"></div>
+  <div id="map" style="width:100%;height:500px"></div>
 
 </div>
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js'></script>
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.css' type='text/css' />
+<div id='map'></div>
+ 
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoiY2FybGFyc21lbmRlcyIsImEiOiJjanVsMWZtdjMwYTRvM3lvOGp5aWZ6cnJtIn0.xv9rm--YRNKdTJGHFYzi0g';
+var map = new mapboxgl.Map({
+container: 'map',
+style: 'mapbox://styles/mapbox/streets-v11',
+center: [-79.4512, 43.6568],
+zoom: 13
+});
+ 
+map.addControl(new MapboxDirections({
+accessToken: mapboxgl.accessToken
+}), 'top-left');
+</script>
