middlewares.js created, add route protection

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,14 +8,14 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.0.0/mapbox-gl-geocoder.css' type='text/css' />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
- <script src="https://static-assets.mapbox.com/gl-pricing/dist/mapbox-gl.js"></script>
  <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.0.0/mapbox-gl-geocoder.min.js'></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css" rel="stylesheet" />
+ <script src="https://static-assets.mapbox.com/gl-pricing/dist/mapbox-gl.js"></script>
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.0.0/mapbox-gl-geocoder.css' type='text/css' />
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+  
 
 </head>
 
@@ -38,6 +38,9 @@
     <li class="nav-item"><a class="nav-link" href="/average-cost">Average Cost</a></li>
     <li class="nav-item"><a class="nav-link" href="/confirm-date">Confirm Date</a></li>
     <li class="nav-item"><a class="nav-link" href="/location">Location</a></li>
+    <li class="nav-item"><a class="nav-link" href="/show-map">Show Map</a></li>
+    <li class="nav-item"><a class="nav-link" href="/restaurant-user-form">Restaurant User Form</a></li>
+    <li class="nav-item"><a class="nav-link" href="/profile-page">Profile</a></li>
       </div>
 </ul>
   </nav>
