--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,4 +27,12 @@ i:hover {
   align-items: center;
   padding: 5%; }
 
+.marker {
+  background-image: url("mapbox-icon.png");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer; }
+
 /*# sourceMappingURL=style.css.map */
