--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -36,4 +36,12 @@ i:hover{
   padding:5%;
 }
 
+.marker {
+  background-image: url('mapbox-icon.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
