--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -5,18 +5,18 @@
 <div class="container">
   <div class="row">
     <div class="col col-sm-4">
-      <i class="fas fa-glass-martini-alt fa-3x text-center"></i>
+      <a href="/date-type-bar"><i class="fas fa-glass-martini-alt fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-music fa-3x text-center"></i>
+      <i class="fas fa-music fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-film fa-3x text-center"></i>
+      <a href="/date-type-movie"><i class="fas fa-film fa-3x text-center"></i></a>
     </div>
   </div>
   <div class="row">
     <div class="col col-sm-4">
-     <i class="fas fa-pizza-slice fa-3x text-center"></i>
+     <a href="/date-type-movie"><i class="fas fa-pizza-slice fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
       <i class="fas fa-couch fa-3x text-center"></i>
