--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <p>Welcome to Save my Date!</p>
 
 
-<a href="/location">Start</a>
+<a href="/location" class="btn btn-primary">Start</a>
 
 {{!-- <form action="/searchPlace" method="GET">
 Search place by Id: <input type="button" class="form-control" name="Cafe" value="Cafe">
