--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,7 +16,7 @@
 
   <br><br>
 
-  <button>Login</button>
+  <button class="btn btn-primary">Login</button>
 
   <p class="account-message">
     Don't have an account yet?
