--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -16,7 +16,7 @@
 
   <br><br>
 
-  <button>Create account</button>
+  <button class="btn btn-primary">Create account</button>
 
   <p class="account-message">
     Do you already have an account?
