change on routes link and bootstrap details

--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -8,7 +8,7 @@
       <a href="/date-type-bar"><i class="fas fa-glass-martini-alt fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-music fa-3x text-center"></i></a>
+      <a href="/date-type-club"><i class="fas fa-music fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
       <a href="/date-type-movie"><i class="fas fa-film fa-3x text-center"></i></a>
@@ -16,13 +16,13 @@
   </div>
   <div class="row">
     <div class="col col-sm-4">
-     <a href="/date-type-movie"><i class="fas fa-pizza-slice fa-3x text-center"></i></a>
+     <a href="/date-type-dinner"><i class="fas fa-pizza-slice fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-couch fa-3x text-center"></i>
+      <a href="/date-type-netflix"><i class="fas fa-couch fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
-      <i class="fas fa-mug-hot fa-3x text-center"></i>
+      <a href="/date-type-coffee"><i class="fas fa-mug-hot fa-3x text-center"></i></a>
     </div>
   </div>
 </div>
