--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,7 +39,7 @@
     <li class="nav-item"><a class="nav-link" href="/date-type">Date Type</a></li>
     <li class="nav-item"><a class="nav-link" href="/date-options">Date Options</a></li>
     <li class="nav-item"><a class="nav-link" href="/current-location">Current Location</a></li>
-    <li class="nav-item"><a class="nav-link" href="/average-cost">Average Cost</a></li>
+    <li class="nav-item"><a class="nav-link" href="/price-range">Average Cost</a></li>
     <li class="nav-item"><a class="nav-link" href="/confirm-date">Confirm Date</a></li>
     <li class="nav-item"><a class="nav-link" href="/location">Location</a></li>
     <li class="nav-item"><a class="nav-link" href="/show-map">Show Map</a></li>
