--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-     <a class="navbar-brand" href="#">Save My Date</a>
+     <a class="navbar-brand" href="/">Save My Date</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
