--- a/views/show-map.hbs
+++ b/views/show-map.hbs
@@ -4,6 +4,7 @@
 
   <div id="map" style="width:100%;height:500px"></div>
 
+<button onclick="getLocation()">Try It</button>
 </div>
 
 
@@ -12,6 +13,8 @@
 <div id='map'></div>
  
 <script>
+
+
 mapboxgl.accessToken = 'pk.eyJ1IjoiY2FybGFyc21lbmRlcyIsImEiOiJjanVsMWZtdjMwYTRvM3lvOGp5aWZ6cnJtIn0.xv9rm--YRNKdTJGHFYzi0g';
 var map = new mapboxgl.Map({
 container: 'map',
@@ -23,4 +26,25 @@ zoom: 13
 map.addControl(new MapboxDirections({
 accessToken: mapboxgl.accessToken
 }), 'top-left');
+
+
+
+var x = document.getElementById("demo");
+var userLocation = []
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    console.log("Geolocation is not supported by this browser.")
+  }
+}
+
+function showPosition(position) {
+  userLocation.push(position.coords.latitude, position.coords.longitude)
+  console.log(userLocation)
+  return userLocation
+}
+
 </script>
+
