cards bootstrap options fixed

--- a/views/date-options.hbs
+++ b/views/date-options.hbs
@@ -1,64 +1,42 @@
 <div class="general-container">
-<p>We found these places for you</p>
-
-
-
-
-</div>
-
+  <br>
+<h1 class="text-center">These are the closest options for your date</h1>
+<br>
+<h2 class="text-center">Let us know which one is your favorite!</h2>
+<br><br>
 <div id="accordion">
-  <div class="card">
+  
+ {{#each finalOptions }}
+
+ <div class="card">
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Option 1
+          {{this.name}}
         </button>
       </h5>
     </div>
- {{#each finalOptions }}
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
      
       <div class="card-body">
 
         <ul>
           
-          <li>Your Date Location:{{this.name}}</li>
-          <li>Average Cost for Two:{{this.average_cost_for_two}}</li>
-          <li>Cuisine:{{this.cuisines}}</li>
-          <li>Your Date Location:{{this.average_cost_for_two}}</li>
+          <li>Your Date Location: {{this.name}}</li>
+          <li>Average Cost for Two: {{this.average_cost_for_two}}€</li>
+          <li>Cuisine: {{this.cuisines}}</li>
+          <br>
+          <a class="btn btn-primary text-center" href="/date-options/{{this.id}}">My favorite Option</a>
            
         </ul>
        
       </div>
   </div>
 
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-           Option 2
-        </button>
-      </h5>
-    </div>
+  
        {{/each }}
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Option 3
-        </button>
-      </h5>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
+      
+
 </div>
+</div>
+
