creating cinema options

--- a/views/cinema-options.hbs
+++ b/views/cinema-options.hbs
@@ -23,12 +23,10 @@
         <ul>
           
           <li>Your Date Location: {{this.name}}</li>
-          <li>Average Cost for Two: {{this.average_cost_for_two}}€</li>
-          <li>Cuisine: {{this.cuisines}}</li>
-          <li>Address: {{this.location.address}}</li>
+          <li>Address: {{this.address}}</li>
           <br>
-          <a class="btn btn-primary text-center" href="/date-options/{{this.id}}">My favorite Option</a>
-           
+          {{!-- <a class="btn btn-primary text-center" href="/date-options/{{this._id}}">My favorite Option</a> --}}
+
         </ul>
        
       </div>
