--- a/views/date-options.hbs
+++ b/views/date-options.hbs
@@ -6,7 +6,7 @@
 <br><br>
 <div id="accordion">
   
- {{#each finalOptions }}
+ {{#each filteredOptions }}
 
  <div class="card">
     <div class="card-header" id="headingOne">
