working on movie routes

--- a/views/date-type-movie.hbs
+++ b/views/date-type-movie.hbs
@@ -22,10 +22,10 @@
 
         <ul>
           
-          <li>Your Date Location: {{this.name}}</li>
           <li>Address: {{this.address}}</li>
+          <li> <a href="{{this.website}}">Go to website </a></li>
           <br>
-          {{!-- <a class="btn btn-primary text-center" href="/date-options/{{this._id}}">My favorite Option</a> --}}
+          <a class="btn btn-primary text-center" href="/confirm-movie/{{this._id}}">My favorite Option</a>
 
         </ul>
        
