Added the dates to the profile page

--- a/views/confirm-date.hbs
+++ b/views/confirm-date.hbs
@@ -1,11 +1,11 @@
 <div class="general-container">
 <ul class="h2"> Confirm the details of your date:</ul>
 
-<li>Restaurant Name: {{createdDate.date_location_name}}</li>
+<li>Restaurant: {{createdDate.date_location_name}}</li>
 <li>Rating: {{createdDate.rating}}</li>
 <li>Cuisines:{{createdDate.cuisines}} </li>
-<li>Average cost for 2: {{createdDate.AvgCostforTwo}}€</li>
-<li>Adress: {{createdDate.address}}</li>
+<li>Average cost for two: {{createdDate.AvgCostforTwo}}€</li>
+<li>Address: {{createdDate.address}}</li>
 </ul>
 
 <br>
