--- a/views/price-range.hbs
+++ b/views/price-range.hbs
@@ -1,17 +1,17 @@
 <div class="general-container">
-<p>Choose based on the cost</p>
+<h1 class="text-center">Choose based on the cost</h1>
 
 <div class="container">
   <div class="row">
-    <div class="col col-sm-4">
+    <div class="col col-sm-6 text-center">
       <a href="/price-range-1">
-      <i class="fas fa-money-bill-wave fa-2x text-center"></i></a>
+      <i class="fas fa-piggy-bank fa-2x text-center"></i></a>
     </div>
-    <div class="col col-sm-4">
+    <div class="col col-sm-6 text-center">
       <a href="/price-range-2">
-      <i class="fas fa-money-bill-wave fa-2x text-center"></i>
-      <i class="fas fa-money-bill-wave fa-2x text-center"></i></a>
+      <i class="fas fa-coins fa-2x text-center"></i></a>
     </div>
   </div>
+</div>
 </div>
 </div>
