--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -1,7 +1,7 @@
 <div class="general-container">
-<h1>User Profile</h1>
+<h1>Your Profile</h1>
 
-<p>E-mail:</p>  
+<p>E-mail: {{user.email}}</p>  
 
 <hr>
 
