rendering movie on profile page

--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -15,6 +15,12 @@
 <b>Address:</b> {{this.address}} <br>
 <br><br>
 {{/each}}
+
+
+<b>Cinema Name:</b> {{cinemaDates._cinema.name}} <br>
+<b>Address:</b> {{cinemaDates._cinema.address}} <br>
+<br><br>
+
 </ul>
 
 <a class="btn btn-info"  href="">Send details to my Date!</a>
