Added the delete option to the date list

--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -13,6 +13,8 @@
 <b>Cuisines:</b> {{this.cuisines}} <br>
 <b>Average cost for two:</b> {{this.AvgCostforTwo}}€ <br>
 <b>Address:</b> {{this.address}} <br>
+<br>
+<a href="/{{this._id}}/delete" class="btn btn-outline-danger">Delete</a>
 <br><br>
 {{/each}}
 </ul>
