--- a/views/price-range.hbs
+++ b/views/price-range.hbs
@@ -5,11 +5,18 @@
   <div class="row">
     <div class="col col-sm-6 text-center">
       <a href="/price-range-1">
-      <i class="fas fa-piggy-bank fa-2x text-center"></i></a>
+      <i class="fas fa-piggy-bank fa-2x text-center" data-toggle="tooltip" data-placement="bottom" title="If you're a budget-friendly person"></i></a>
+
+
+      {{!-- <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
+  Tooltip on bottom
+</button> --}}
+
+
     </div>
     <div class="col col-sm-6 text-center">
       <a href="/price-range-2">
-      <i class="fas fa-coins fa-2x text-center"></i></a>
+      <i class="fas fa-coins fa-2x text-center"  data-toggle="tooltip" data-placement="bottom" title="If you're just livin' the life"></i></a>
     </div>
   </div>
 </div>
