--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -9,7 +9,7 @@
 <br>
 <ul>
 {{#each userDates}}
-<b>Restaurant:</b> {{this.date_location_name}} <br>
+<b>Location:</b> {{this.date_location_name}} <br>
 <b>Cuisines:</b> {{this.cuisines}} <br>
 <b>Average cost for two:</b> {{this.AvgCostforTwo}}€ <br>
 <b>Address:</b> {{this.address}} <br>
@@ -17,8 +17,6 @@
 <a href="/{{this._id}}/delete" class="btn btn-outline-danger">Delete</a>
 <br><br>
 {{/each}}
-
-
 </ul>
 
 <a class="btn btn-info"  href="">Send details to my Date!</a>
