creating email invitation

--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -15,11 +15,13 @@
 <b>Address:</b> {{this.address}} <br>
 <br>
 <a href="/{{this._id}}/delete" class="btn btn-outline-danger">Delete</a>
+<form action="" method="post">
+<a class="btn btn-info"  href="">Send details to my Date!</a>
+</form>
 <br><br>
 {{/each}}
 
 
 </ul>
 
-<a class="btn btn-info"  href="">Send details to my Date!</a>
 <br>
