--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -15,9 +15,15 @@
 <b>Address:</b> {{this.address}} <br>
 <br>
 <a href="/{{this._id}}/delete" class="btn btn-outline-danger">Delete</a>
-<form action="" method="post">
-<a class="btn btn-info"  href="">Send details to my Date!</a>
+
+
+<form action="/send-email" method="post">
+  <label for="">Email</label>
+  <input type="email" name="email" id="">
+<button class="btn btn-info" type="submit">Send details to my Date!</button>
 </form>
+
+
 <br><br>
 {{/each}}
 
