--- a/views/confirm-date.hbs
+++ b/views/confirm-date.hbs
@@ -1,7 +1,7 @@
 <div class="general-container">
 
 
-<ul class="h2"> Confirm the details of your date</ul>
+<h2>Confirm the details of your date</h2> 
 
 
 <div class="card" style="width: 18rem;">
@@ -15,5 +15,7 @@
     <a class="btn btn-danger" href="/confirm-date">  SAVE MY DATE!  </a>
   </div>
 </div>
+
+
 <br>
 </div>
