--- a/views/confirm-netflix.hbs
+++ b/views/confirm-netflix.hbs
@@ -1,12 +1,12 @@
 <div class="general-container">
     <br>
-<h2>Confirm the details of your date</h2> 
+<h2>Confirm the details of your movie date</h2> 
 <br>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="/images/cool_dog_cinema.jpeg" alt="Card image cap">
   <div class="card-body">
-        <h5 class="card-title"><strong>Cinema name: </strong>{{finalOption.name}}</h5>
+        <h5 class="card-title"><strong>Movie name: </strong>{{finalOption.name}}</h5>
         <p class="card-text"><strong>Address: </strong>{{finalOption.address}}</p>
         <p class="card-text"><strong>Website: </strong>{{finalOption.website}}</p>
         <a class="btn btn-danger text-center" href="/profile-page">  SAVE MY DATE!  </a>
@@ -14,9 +14,7 @@
 </div>
 
 
-
 <br>
-
 
 
 </div>
