--- a/views/location.hbs
+++ b/views/location.hbs
@@ -7,7 +7,7 @@
     <input type="hidden" name="lat">
     <input type="hidden" name="lng">
     <button id="get-user-location" class="btn btn-outline-primary">Get your location</button>
-    <button type="submit" class="btn btn-primary">Search</button>
+    <button type="submit" class="btn btn-primary">Next</button>
    </form>
     <br>
       <div id="map" style="width:100%;height:300px"></div>
