Option filter half fixed

--- a/views/date-options.hbs
+++ b/views/date-options.hbs
@@ -26,6 +26,7 @@
           <li>Average Cost for Two: {{this.average_cost_for_two}}€</li>
           <li>Cuisine: {{this.cuisines}}</li>
           <li>Address: {{this.location.address}}</li>
+          <li>Rating: {{this.rating}}</li>
           <br>
           <a class="btn btn-primary text-center" href="/date-options/{{this.id}}">My favorite Option</a>
            
