--- a/views/confirm-date.hbs
+++ b/views/confirm-date.hbs
@@ -12,7 +12,7 @@
     <p class="card-text"><strong>Cuisines: </strong>{{finalOption.[0].cuisines}}</p>
     <p class="card-text"><strong>Average cost for 2: </strong>{{finalOption.[0].average_cost_for_two}}€</p>
     <p class="card-text"><strong>Address: </strong>{{finalOption.[0].location.address}}</p>
-    <a class="btn btn-danger" href="/confirm-date">  SAVE MY DATE!  </a>
+    <a class="btn btn-danger btn-call-to-action" href="/confirm-date">  SAVE MY DATE!  </a>
   </div>
 </div>
 
