--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,6 @@
     <h1>Save my Date!</h1>
 <p>Welcome to Save my Date!</p>
 
-<a href="/location" class="btn btn-primary">Start</a>
+<a href="/location" class="btn btn-primary btn-call-to-action">Start</a>
 
 </div>
