--- a/views/date-type-netflix.hbs
+++ b/views/date-type-netflix.hbs
@@ -25,7 +25,7 @@
           <li>Duration: {{finalOptions.duration}}</li>
           <li>IMDB Rate: {{finalOptions.rate}}</li>
           <br>
-          <a class="btn btn-primary text-center" href="/confirm-movie/{{finalOptions._id}}">My favorite Option</a>
+          <a class="btn btn-primary text-center" href="/confirm-netflix/{{finalOptions._id}}">My favorite Option</a>
         </ul> 
       </div>
   </div>
