--- a/views/confirm-netflix.hbs
+++ b/views/confirm-netflix.hbs
@@ -1,7 +1,9 @@
 <div class="general-container">
     <br>
 <h2>Confirm the details of your movie date</h2> 
-<br>
+<br><br><br>
+<a href="/location" class="btn btn-outline-warning btn-block ">Never mind - I want to try other options!</a>
+<br><br>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="/images/cool_dog_cinema.jpeg" alt="Card image cap">
