--- a/views/date-type-netflix.hbs
+++ b/views/date-type-netflix.hbs
@@ -2,8 +2,8 @@
   <br>
 <h1 class="text-center">These are the best options for your date</h1>
 <br>
-<h2 class="text-center">You can always go back and choose again</h2>
-<h3 class="text-center">You know, if it's not available on Netflix!</h3>
+<br>
+<a href="/location" class="btn btn-outline-warning btn-block ">Never mind - I want to try other options!</a>
 <br><br>
 <div id="accordion">
   
@@ -29,7 +29,7 @@
         </ul> 
       </div>
   </div>
-  <a class="btn btn-primary" href="/date-type-netflix">Try Again for a different choice!</a>
+  <a class="btn btn-primary" href="/date-type-netflix">Try Again for a different movie!</a>
 </div>
 </div>
 
