--- a/views/date-options.hbs
+++ b/views/date-options.hbs
@@ -2,7 +2,9 @@
   <br>
 <h1 class="text-center">These are the closest options for your date</h1>
 <br>
-<h2 class="text-center">Let us know which one is your favorite!</h2>
+<h3 class="text-center">Let us know which one is your favorite!</h3>
+<br><br><br>
+<a href="/location" class="btn btn-outline-warning btn-block ">Never mind - I want to try other options!</a>
 <br><br>
 <div id="accordion">
   
