--- a/views/location.hbs
+++ b/views/location.hbs
@@ -6,11 +6,15 @@
     {{!-- <input type="text" class="form-control" name="address" placeholder="Type your address"> --}}
     <input type="hidden" name="lat">
     <input type="hidden" name="lng">
-    <button id="get-user-location" class="btn btn-outline-primary">Get your location</button>
-    <button type="submit" class="btn btn-primary">Next</button>
+    <button id="get-user-location" class="btn  btn-primary" data-toggle="collapse" href="#collapseExample">Get your location</button>
+    <br> <br>
+    <div class="collapse" id="collapseExample">
+       <button type="submit" class="btn btn-outline-primary btn-block">Next</button>
+       </div>
    </form>
     <br>
       <div id="map" style="width:100%;height:300px"></div>
+   
 
     {{!-- <br><br>
     Tell us your date details!<input type="datetime" name="datetime" id="datetime">
