--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,27 +1,48 @@
-<div class="general-container">
-<h2>Login</h2>
+<div class="general-container align-middle">
+  
+    <h1 class="text-center">Welcome to Save my Date!</h1>
+<p>Login so you can costumize your date experience</p>
+<br><br>
 
+{{!-- <a href="/location" class="btn btn-primary btn-block ">Start</a> --}}
+<br>
+<div class="card text-center">
+
+  <div class="card-body">
+    
 <form action="/auth/login" method="POST" id="form-container">
+  <div class="form-group">
   <label for="email">E-mail</label>
-  <input id="email" type="text" name="email" placeholder="Your e-mail here">
-
-  <br><br>
-
+  <input id="email" type="text" name="email" placeholder="Your e-mail here"  class="form-control" >
+  <small id="emailHelp" class="form-text text-muted">Here goes your e-mail.</small>
+<div class="form-group">
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
+  <small id="emailHelp" class="form-text text-muted">Here goes your password.</small>
+ </div>
   <br>
+  
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
 
   <br><br>
 
-  <button class="btn btn-primary">Login</button>
+  <button class="btn btn-primary btn-block">Login</button>
 
-  <p class="account-message">
+  </div>
+</form>
+
+
+  </div>
+  <div class="card-footer text-muted">
+   <p class="account-message">
     Don't have an account yet?
     <a href="/auth/signup">Signup</a>
   </p>
-</form>
+  </div>
+</div>
+
 
 </div>
+
