--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,8 +20,9 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-     <a class="navbar-brand" href="/">Save My Date</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    {{!-- <a class="navbar-brand" href="/"></a> --}}
+     <img src="images/Brand_White_Horizontal-04.svg" href="/" alt="brand-horizontal" height="100%">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
