--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col col-sm-4">
-      <a href="/budget?lat={{lat}}&lng={{lng}}&kind=drink"><i class="fas fa-glass-martini-alt fa-3x text-center"></i></a>
+      <a href="/date-type-bar"><i class="fas fa-glass-martini-alt fa-3x text-center"></i></a>
     </div>
     <div class="col col-sm-4">
       <a href="/date-type-club"><i class="fas fa-music fa-3x text-center"></i></a>
